# squeezebox-sound-menu

./: .gitignore  AUTHORS  MAINTAINERS  Makefile.am  autogen.sh  configure.ac
src/: Makefile.am  jsonrpc.vala  main.vala  squeezeboxapi.vala  squeezeboxrpc.vala
