NULL = 

AM_CPPFLAGS = \
	$(SQUEEZEBOX_SOUND_MENU_CFLAGS) \
	-include $(CONFIG_HEADER) \
	$(NULL)

bin_PROGRAMS = squeezebox_sound_menu

squeezebox_sound_menu_SOURCES = \
	main.vala \
	$(NULL)

squeezebox_sound_menu_LDADD = \
	$(SQUEEZEBOX_SOUND_MENU_LIBS) \
	$(NULL)

EXTRA_DIST = \
	$(NULL)

DISTCLEANFILES = \
	$(NULL)

